公考 四：类比关系

--- a/学习/公考/公基.md
+++ b/学习/公考/公基.md
@@ -224,7 +224,7 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 ​	论点A->C
 
-选项：加强 B->C
+选项：加强 B->C   （当A->B时，满足B->C 方可推出 A->C）
 
 ![image-20220813110407138](./assets/image-20220813110407138.png)
 
@@ -234,7 +234,7 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 ​	论点C->B
 
-选项：加强 C->A
+选项：加强 C->A   （满足C->A时，当A->B时，才可推出C->B）
 
 ![image-20220813110914319](./assets/image-20220813110914319.png)
 
@@ -268,7 +268,7 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 ![image-20220813114616827](./assets/image-20220813114616827.png)
 
-# 数量关系
+# 三 数量关系
 
 ## 1 分数数列
 
@@ -432,7 +432,7 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 ### 口诀17：构造数列   1编号（从大到小） 2求谁设谁 3列方程
 
-把M项分成N项 是最值问题中的构造数列问题
+**把M项分成N项** 是最值问题中的构造数列问题
 
 ![image-20220814181459926](./assets/image-20220814181459926.png)
 
@@ -445,3 +445,99 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 题目出现多个集合，并让计算所有集合条件都满足的元素至少有几个
 
 ![image-20220814204507585](./assets/image-20220814204507585.png)
+
+# 四 类比推理 
+
+## 1 类比推理（种属关系）
+
+### 口诀1：种属关系看泛特
+
+泛指和特指
+
+题目：什么是什么的一种
+
+![image-20220816203859520](./assets/image-20220816203859520.png)
+
+
+
+## 2 类比推理（词性：动词名词形容词近义词反义词）
+
+### 口诀2：词语拆分看词性 （动词名词形容词）
+
+![image-20220816204237140](./assets/image-20220816204237140.png)
+
+### 口诀2： 常用词语看词性 （动词名词形容词）
+
+![image-20220816204501775](./assets/image-20220816204501775.png)
+
+
+
+## 3 类比推理（顺序关系）
+
+### 口诀3：顺序关系看主体
+
+![image-20220816204743594](./assets/image-20220816204743594.png)
+
+
+
+## 4 类比推理（因果关系）
+
+### 口诀4：因果关系看人自 
+
+人工和自然
+
+![image-20220816204926609](./assets/image-20220816204926609.png)
+
+
+
+
+
+## 5 类比推理（职业身份）
+
+### 口诀5：职业身份看工资
+
+学生是一种身份，厨师拿钱是一种职业
+
+![image-20220816205147028](./assets/image-20220816205147028.png)
+
+## 6 类比推理（文学常识）
+
+### 口诀6：历史典故看主客 
+
+主体和客体
+
+![](./assets/image-20220816205657997.png)
+
+## 7 类比推理（原材料）
+
+### 口诀7：原材料要看物化
+
+物理变化和化学变化
+
+没有新的物质产生是物理变化
+
+![image-20220816210056315](./assets/image-20220816210056315.png)
+
+## 8 类比推理（功能对应）
+
+### 口诀8：功能关系看主次
+
+主要功能和次要功能
+
+![image-20220816210514350](./assets/image-20220816210514350.png)
+
+## 9 类比推理（属性）
+
+### 口诀9：属性关系看必或
+
+必然和或然，一定有的是必然，有的是或然
+
+![image-20220816210958700](./assets/image-20220816210958700.png)
+
+## 10 类比推理（场所）
+
+### 口诀10：场所关系看唯一
+
+是不是只能出现在该场所
+
+![image-20220816211449757](./assets/image-20220816211449757.png)
