公考：五：图形推理

--- a/学习/公考/公基.md
+++ b/学习/公考/公基.md
@@ -118,6 +118,12 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 ![image-20220813012907318](./assets/image-20220813012907318.png)
 
+## 14 定义题选非
+
+### 口诀14：同构做排查
+
+![image-20220818233619978](./assets/image-20220818233619978.png)
+
 # 二 加强削弱
 
 ## 推出关系：
@@ -270,6 +276,8 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 # 三 数量关系
 
+**（凡是需要列方程一步步解就输了，不如不做）**
+
 ## 1 分数数列
 
 ### 口诀1：看上不看下、看下不看上、还是不会就通分
@@ -298,9 +306,11 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 ![image-20220814144202297](./assets/image-20220814144202297.png)
 
+![image-20220818234154394](./assets/image-20220818234154394.png)
+
 ## 4 奇偶特性
 
-### 口诀4：
+### 口诀4：知和求差，和差同性（反之亦然）
 
 #### 1：求不定方程
 
@@ -319,6 +329,8 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 两数之和为奇，两数只差也为奇
 
 ![image-20220814145512653](./assets/image-20220814145512653.png)
+
+![image-20220818235206243](./assets/image-20220818235206243.png)
 
 ## 5 概率问题
 
@@ -354,7 +366,7 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 ## 8 鸡兔同笼
 
-### 口诀8：
+### 口诀8：假设都是B 总差/个差=A
 
 ![image-20220814154037300](./assets/image-20220814154037300.png)
 
@@ -444,7 +456,25 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 题目出现多个集合，并让计算所有集合条件都满足的元素至少有几个
 
+要让共同借鉴的最少，则都没有借过的要最多（3人没借过的书没有重合）
+
 ![image-20220814204507585](./assets/image-20220814204507585.png)
+
+
+
+## 19 最值问题（补充题型）
+
+### 平均值才能保证相同的最少，或者总量不变，一方变少，肯定有一方增加
+
+![image-20220818154159551](./assets/image-20220818154159551.png)
+
+
+
+## 20 特值思维
+
+最小公倍数
+
+![image-20220819002333464](./assets/image-20220819002333464.png)
 
 # 四 类比推理 
 
