--- a/学习/公考/公基2.md
+++ b/学习/公考/公基2.md
@@ -36,9 +36,9 @@
 
 ![image-20220817215025444](./assets/image-20220817215025444.png)
 
+#### 类型：综合（分开看）
 
-
-
+![image-20220818110602970](./assets/image-20220818110602970.png)
 
 ## 2 汉字
 
@@ -117,3 +117,11 @@
 #### 旋转
 
 ![image-20220817234258809](./assets/image-20220817234258809.png)
+
+## 6 九宫格
+
+### 去同存异
+
+![image-20220819013601611](./assets/image-20220819013601611.png)
+
+![image-20220819013625966](./assets/image-20220819013625966.png)
