--- a/学习/公考/公基.md
+++ b/学习/公考/公基.md
@@ -120,7 +120,7 @@ A和非A、所有都是和有的不是、所有都不是和有的是
 
 ## 14 定义题选非
 
-### 口诀14：同构做排查
+### 口诀14：同构做排除
 
 ![image-20220818233619978](./assets/image-20220818233619978.png)
 
