--- a/学习/公考/常识.md
+++ b/学习/公考/常识.md
@@ -71,7 +71,7 @@
 三大平原：东北平原、华北平原、长江中下游平原
 【世界最高的高原是青藏高原、世界最大高原是巴西高原，最大平原是亚马孙平原】
 
-四大盆地：塔里木盆地、准格尔盆地（魔鬼城）、柴达木盆地（聚宝盆）、四川盆地
+四大盆地：塔里木盆地、准格尔盆地（魔鬼城）、柴达木盆地（聚宝盆、青海）、四川盆地
 
 世界三大长河： 尼罗河、亚马逊河、长江
 【世界最长河流是尼罗河、流域面积最广、流量最大的是亚马逊河、水
